--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = avocado-price-predictor-shay-sirek
+name = avocado-price-predictor
 version = 0.0.1
 author = Shay Sirek
 author_email = shaysirek@gmail.com
@@ -16,9 +16,13 @@ classifiers =
 
 [options]
 package_dir =
-    = prediction
+    = .
 packages = find:
 python_requires = >=3.7
+install_requires =
+    Django
+    djangorestframework
+    avocado-price-predictor-model
 
 [options.packages.find]
-where = prediction
+where = .
