--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,12 @@ isolated_build = True
 [testenv]
 deps = 
     pytest
+    pytest-cov
     pytest-django
     Django
     djangorestframework
-    coverage
+    avocado-price-predictor-model
+setenv =
+    MODEL_URL = https://drive.google.com/uc?id=1UiH6y3kvlWcGTpH9AV9qsQrjJZ-X9f2s
 commands =
-    coverage run -m pytest
-    coverage report -m prediction/tests.py
+    pytest --cov=prediction prediction/tests.py
